# nnm-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.hybrid  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: EVAL.md  SMOKE_TEST.md
docs/superpowers/plans/: 2026-05-19-nnm-ai.md
docs/superpowers/specs/: 2026-05-19-nnm-ai-design.md  2026-05-20-viewer-redesign-design.md
scripts/: check.sh
src/nnm/: __init__.py  config.py  errors.py  logging.py  main.py
src/nnm/api/: deps.py  rag_router.py
src/nnm/api/viewer/: router.py
src/nnm/api/viewer/templates/: _macros.html  base.html  chunk_detail.html  dashboard.html  jobs.html  paper_detail.html  papers_list.html  rag.html
src/nnm/db/: base.py  models.py  session.py
src/nnm/db/migrations/: env.py
src/nnm/db/migrations/versions/: 0001_install_vector_extension.py  (+6 more)
src/nnm/domain/: chunk.py  embedding.py  paper.py
src/nnm/eval/: __init__.py  gen_golden.py  metrics.py  ragas_runner.py  run_ragas.py  viz.py
src/nnm/infra/: bedrock_client.py  groq_client.py  local_embedder.py  ops_db.py  repository.py  s3.py
src/nnm/services/: backfill.py  chunker.py  maintenance.py  pdf_extractor.py  publication_mapper.py  rag.py  repository.py  title_filter.py
src/nnm/workers/: backfill_cli.py
tests/eval/: README.md
tests/integration/: conftest.py  test_maintenance.py  test_repository.py
tests/unit/: test_backfill.py  test_chunker.py  test_config.py  test_domain.py  test_errors.py  test_local_embedder.py  test_logging.py  test_main.py  test_pdf_extractor.py  test_publication_mapper.py  test_s3.py
tools/: local_extract.py
var/: failed_pdfs.jsonl
var/eval/: golden.html  golden.jsonl  index.html  ragas_20260527T042658Z.csv  ragas_20260527T042658Z.html  ragas_20260527T042658Z.json  ragas_20260527T043652Z.csv  ragas_20260527T043652Z.html  ragas_20260527T043652Z.json  ragas_20260527T051138Z.csv  ragas_20260527T051138Z.html  ragas_20260527T051138Z.json  ragas_20260527T053138Z.csv  ragas_20260527T053138Z.html  ragas_20260527T053138Z.json
