[project]
name = "nnm-ai"
version = "0.1.0"
description = "Academic paper embedding pipeline (bge-m3 + pgvector)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "asyncmy>=0.2.10",
    "alembic>=1.14",
    "pgvector>=0.3",
    "structlog>=24.4",
    "aioboto3>=13.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "typer>=0.13",
    "jinja2>=3.1",
    "opendataloader-pdf>=2.4.4",
    "transformers>=4.46",
    "prometheus-client>=0.21",
    "numpy>=1.26",
]

[project.optional-dependencies]
cpu = ["torch>=2.5", "FlagEmbedding>=1.3"]
gpu = ["torch>=2.5", "FlagEmbedding>=1.3"]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "httpx>=0.28",
    "types-aiobotocore[s3]>=2.15",
]

[project.scripts]
nnm = "nnm.workers.backfill_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nnm"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "ARG", "PIE", "RUF", "ASYNC", "TID", "ANN", "C901"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "ARG"]
"src/nnm/db/migrations/**/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
exclude = ["tests/", "src/nnm/db/migrations/"]

[[tool.mypy.overrides]]
module = ["FlagEmbedding.*", "opendataloader_pdf.*", "pgvector.*", "aioboto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["integration: requires Postgres + vector extension"]
